--- a/docs/Matemáticas/calculo_II.mdx
+++ b/docs/Matemáticas/calculo_II.mdx
@@ -32,7 +32,7 @@ siempre que este límite exista y dé el mismo valor para todos las posibles ele
   width="60%"
 />
 
-## Propiedades de la integral definida
+### Propiedades de la integral definida
 
 Cuando se definió la integral definida $\int_a^b f(x) d x$, de manera implícita se supuso que $a<b$. Pero la definición como un límite de la suma de Riemann tiene sentido aun cuando $a>b$. Note que si invertimos $a$ y $b$, entonces $\Delta x$ cambia de $(b-a) / n$ a $(a-b) / n$. En consecuencia,
 
