--- a/docs/Matemáticas/calculo_III.mdx
+++ b/docs/Matemáticas/calculo_III.mdx
@@ -114,4 +114,4 @@ $$
 
 ### Máximo de la derivada direccional
 
-Supongamos que $f$ es una función derivable de dos o tres variables. El **valor máximo** de la derivada direccional $D_{\mathbf{u}} f(\mathbf{x})$ es $|\nabla f(\mathbf{x})|$ y se presenta cuando u tiene la misma dirección que el vector gradiente $\nabla f(\mathbf{x})$.
+Supongamos que $f$ es una función derivable de dos o tres variables. El **valor máximo** de la derivada direccional $D_{\mathbf{u}} f(\mathbf{x})$ es $|\nabla f(\mathbf{x})|$ y se presenta cuando $\mathbf{u}$ tiene la misma dirección que el vector gradiente $\nabla f(\mathbf{x})$.
